--- a/app/assets/stylesheets/apeachbook.scss
+++ b/app/assets/stylesheets/apeachbook.scss
@@ -8,7 +8,7 @@ $gray: #e9ebee;
 $gray_dark: #90949c;
 /* custom template */
 html, body {
-   height: 100%;
+   min-height: 100%;
    font-family:verdana,arial,sans-serif;
    color:#555555;
 }
