--- a/app/views/apeachbook/index.html.erb
+++ b/app/views/apeachbook/index.html.erb
@@ -52,10 +52,10 @@
 
 
           <!-- ******* 수업시간에 배운 CRUD를 이용하여 게시글을 Create하는 부분입니다 ******* -->
-          <form class="form">
+          <form class="form" action="/apeachbook/write" method="post">
             <h4>상태 업데이트</h4>
             <div class="input-group text-center">
-              <textarea type="text" row="4" class="form-control input-lg" placeholder="무슨 생각을 하고 계신가요?"></textarea>
+              <textarea type="text" row="4" class="form-control input-lg" placeholder="무슨 생각을 하고 계신가요?" name="content"></textarea>
               <span class="input-group-btn"><button class="btn btn-lg btn-primary" type="submit">올리기</button></span>
             </div>
           </form><br>
@@ -83,6 +83,7 @@
 
 
             <!--  ******* 수업시간에 배운 CRUD를 이용하여 게시글을 Read할 수 있도록 표시하는 부분입니다. each do 문법을 이용하여 게시글을 표시해보세요! *******  -->
+            <% @post.each do |p| %>
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h4>오늘의 한마디</h4>
@@ -91,12 +92,13 @@
                   <p class="user_email">어피치어피치</p>
                   <p class="posting_time">3시간</p>
                   <div class="content">
-                  드디어 태양이 내 의지에 반응하여 밝게 빛나는건가!!<br>애들아 뭐하는거야!!,가만히 있지만 말고 너희 몸속에 있는 또다른 자아를 꺼내!!
+                    <%= p.content %>
                   </div><hr>
                   <button class="btn btn-primary" style="margin-right:2em;"><span class="glyphicon glyphicon-thumbs-up" aria-hidden="true">&nbsp;좋아요</span></button>
                   <span class="user_email">무지무지, 라이언이언</span>
                 </div>
               </div>
+            <% end %>
             <!--  ******* 수업시간에 배운 CRUD를 이용하여 게시글을 Read할 수 있도록 표시하는 부분입니다. each do 문법을 이용하여 게시글을 표시해보세요! *******  -->
 
 
